Fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,13 @@ footer {
 	html {
 		height: auto;
 	}
+	
+	header {
+		display: flex;
+		justify-content: space-between;
+		padding: 20px 20px;
+		height: 20px;
+	}
 
 	.left, 
 	.right {
